--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
 </head>
 <body>
 <h1>Курс по ReactJS</h1>
-<script src="static\build\app.js"></script>
+<script src="./static/build/app.js"></script>
 </body>
 </html>
-
