--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
    <title>React</title>
 </head>
 <body>
-<h1>Курс по ReactJS</h1>
-<script src="./static/build/app.js"></script>
+<div id="root"></div>
+<script src="/static/build/app.js"></script>
 </body>
 </html>
